Fix default button style: icon glyph misaligned/hidden
a.pm-button.default span had display:contents in the base stylesheet,
which won over the settings-driven display:flex override (higher
selector specificity: a.pm-button.default span vs .pm-button.default
span) whenever pin_image was left at its default value. The old
line-height:40px centering hack also only matched the hardcoded
40x40 fallback size, not the configurable button width/height.
Centering is now flexbox end to end, consistent with the dynamic
size/color CSS the settings screen generates.

--- a/src/frontend/style.scss
+++ b/src/frontend/style.scss
@@ -90,7 +90,9 @@ a.pm-button.old_default span {
 }
 
 a.pm-button.default {
-	display: block;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	overflow: hidden;
 	text-decoration: none;
 	color: #fff;
@@ -99,18 +101,17 @@ a.pm-button.default {
 	min-height: 40px;
 
 	span {
-		display: contents;
-		font-size: 0;
-		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		height: 100%;
 
 		&::before {
 			content: "\f101";
 			font-family: PM-Font !important;
 			font-size: 24px;
-			margin: 0;
-			line-height: 40px;
-			text-align: center;
-			width: 100%;
+			line-height: 1;
 		}
 	}
 
